[RA-10] SignIn page using DataRobot design system

--- a/src/components/shared/Header/Header.css
+++ b/src/components/shared/Header/Header.css
@@ -27,3 +27,7 @@
   justify-content: flex-end;
   color: var(--text-primary);
 }
+
+.header-container .side-menu .button:not(:first-child) {
+  margin-left: var(--ds-spacing-02);
+}
