--- a/src/views/Auth/Auth.css
+++ b/src/views/Auth/Auth.css
@@ -3,9 +3,37 @@
   color: var(--ds-white);
 }
 
+.auth form {
+  width: 100%;
+  max-width: 400px;
+}
+
+.auth button {
+  width: 100%;
+}
+
 .auth-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.auth .auth-section {
+  width: 100%;
+  max-width: 400px;
+  box-sizing: border-box;
+  background-color: var(--ds-dark-80);
+  border-radius: var(--ds-spacing-02);
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 16px 32px 0px;
+}
+
+.auth .section-content {
+  padding: var(--ds-spacing-06);
+}
+
+.auth .section-footer {
+  padding: var(--ds-spacing-06);
+  background-color: var(--ds-dark-60);
+  border-radius: var(--ds-spacing-02);
+  font-size: 14px;
 }
