--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import '../../../assets//styles/mixins.scss';
+
 .headerContainer {
   display: flex;
   height: 50px;
@@ -29,5 +31,11 @@
     :global(.button):not(:first-child) {
       margin-left: var(--ds-spacing-02);
     }
+  }
+}
+
+@include for-size(phone) {
+  .loginButton {
+    margin-bottom: var(--ds-spacing-04);
   }
 }
