[RA-10] Mobile fixes

--- a/src/views/Auth/Auth.module.scss
+++ b/src/views/Auth/Auth.module.scss
@@ -11,6 +11,11 @@
     width: 100%;
   }
 
+  pre {
+    max-width: 95vw;
+    overflow-x: scroll;
+  }
+
   .authHeader {
     display: flex;
     flex-direction: column;
