--- a/src/views/Placeholder/PlaceholderUsers.module.scss
+++ b/src/views/Placeholder/PlaceholderUsers.module.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  pre {
+    max-width: 95vw;
+    overflow-x: scroll;
+  }
 }
