[RA-30] Show Asteroids page

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @import '~@datarobot/design-system/styles/input.css';
 @import '~@datarobot/design-system/styles/checkbox.css';
 @import '~@datarobot/design-system/styles/button.css';
+@import '~@datarobot/design-system/styles/table.css';
 
 @import 'assets/styles/fontface.css';
 
