--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @import '~@datarobot/design-system/styles/checkbox.css';
 @import '~@datarobot/design-system/styles/button.css';
 @import '~@datarobot/design-system/styles/table.css';
+@import '~@datarobot/design-system/styles/alert.css';
 
 @import 'assets/styles/fontface.css';
 
