--- a/src/components/layouts/Layouts.module.scss
+++ b/src/components/layouts/Layouts.module.scss
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    justify-content: center;
     padding: var(--ds-spacing-05);
   }
 }
