--- a/src/views/Auth/Auth.module.scss
+++ b/src/views/Auth/Auth.module.scss
@@ -1,4 +1,7 @@
 .auth {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--page-background-color);
   color: var(--ds-white);
 
@@ -16,12 +19,6 @@
     overflow-x: scroll;
   }
 
-  .authHeader {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
   .authSection {
     width: 100%;
     max-width: 400px;
@@ -29,16 +26,21 @@
     background-color: var(--ds-dark-80);
     border-radius: var(--ds-spacing-02);
     box-shadow: rgba(0, 0, 0, 0.7) 0px 16px 32px 0px;
-  }
 
-  .sectionContent {
-    padding: var(--ds-spacing-06);
-  }
+    .content {
+      padding: var(--ds-spacing-06);
+    }
 
-  .sectionFooter {
-    padding: var(--ds-spacing-06);
-    background-color: var(--ds-dark-60);
-    border-radius: var(--ds-spacing-02);
-    font-size: 14px;
+    .footer {
+      padding: var(--ds-spacing-06);
+      background-color: var(--ds-dark-60);
+      border-radius: var(--ds-spacing-02);
+      font-size: 14px;
+    }
   }
+}
+
+.alert {
+  max-width: 400px;
+  margin: 0 auto;
 }
