--- a/src/views/Home/Home.module.scss
+++ b/src/views/Home/Home.module.scss
@@ -4,6 +4,11 @@
   flex: 1;
   justify-content: center;
 
+  h1,
+  h2 {
+    text-align: center;
+  }
+
   .homeHeader {
     display: flex;
     flex-direction: column;
@@ -15,5 +20,11 @@
     border-radius: 2px;
     text-decoration: none;
     padding: var(--ds-spacing-02) var(--ds-spacing-04);
+  }
+
+  .alert {
+    width: fit-content;
+    max-width: 600px;
+    margin: 0 auto;
   }
 }
