--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 @import '~@datarobot/design-system/styles/button.css';
 @import '~@datarobot/design-system/styles/table.css';
 @import '~@datarobot/design-system/styles/alert.css';
+@import '~@datarobot/design-system/styles/toggler-switch.css';
 
 @import 'assets/styles/fontface.css';
 
