fake progress bar

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 @import '~@datarobot/design-system/styles/table.css';
 @import '~@datarobot/design-system/styles/alert.css';
 @import '~@datarobot/design-system/styles/toggler-switch.css';
+@import '~@datarobot/design-system/styles/progress-bar.css';
 
 @import 'assets/styles/fontface.css';
 
