--- a/src/views/DrChem/DeNovoApp/DeNovoApp.scss
+++ b/src/views/DrChem/DeNovoApp/DeNovoApp.scss
@@ -5,8 +5,25 @@
   align-items: center;
   z-index: 1;
 
+  .de-novo-request-block {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &.loading {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+  }
+
+  .loading-container {
+    width: 50%;
+  }
+
   .props-form {
-    width: 40%;
+    width: 100%;
   }
 
   .dr-form-field {
