--- a/src/views/DrChem/PredictionsApp/PredictionsApp.scss
+++ b/src/views/DrChem/PredictionsApp/PredictionsApp.scss
@@ -5,8 +5,25 @@
   align-items: center;
   z-index: 1;
 
-  .smiles-form {
+  .predictions-request-block {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &.loading {
+      opacity: 0.5;
+      pointer-events: none;
+    }
+  }
+
+  .loading-container {
+    width: 50%;
+  }
+
+  .smiles-form {
+    width: 100%;
   }
 
   .predictions-app-field {
