with normal table styling

--- a/src/views/DrChem/MoleculesTable.scss
+++ b/src/views/DrChem/MoleculesTable.scss
@@ -1,4 +1,7 @@
-.de-novo-table {
+.molecules-table {
+  width: 95%;
+  margin-top: 24px;
+
   .r-td.rowIndex, .r-th.rowIndex {
     flex: none;
     width: 50px;
