--- a/src/views/DrChem/ModelList.scss
+++ b/src/views/DrChem/ModelList.scss
@@ -1,4 +1,10 @@
 .models-list {
+  & + .button.primary {
+    width: 180px;
+    margin-top: 30px;
+    align-self: center;
+  }
+
   .model-item {
     height: 80px;
     width: 100%;
