--- a/src/views/DrChem/FakeProgressBar.scss
+++ b/src/views/DrChem/FakeProgressBar.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    margin-bottom: 4px;
   }
 
   .center-status.message.in-progress {
