--- a/src/views/DrChem/DrChem.scss
+++ b/src/views/DrChem/DrChem.scss
@@ -4,6 +4,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    max-width: 1300px;
+    margin: 0 auto;
   }
 
   .app-card {
