--- a/src/views/DrChem/DeNovoApp/DeNovoApp.scss
+++ b/src/views/DrChem/DeNovoApp/DeNovoApp.scss
@@ -4,6 +4,10 @@
   align-items: center;
   z-index: 1;
 
+  .app-title {
+    width: 100%;
+  }
+
   .de-novo-request-block {
     width: 50%;
     display: flex;
