selected model info

--- a/src/views/DrChem/StartButton.scss
+++ b/src/views/DrChem/StartButton.scss
@@ -3,6 +3,10 @@
   align-items: center;
   flex-direction: column;
 
+  .selected-model-info {
+    margin-bottom: 20px;
+  }
+
   .start-button {
     position: relative;
     display: block;
