--- a/src/views/DrChem/ModelList.scss
+++ b/src/views/DrChem/ModelList.scss
@@ -12,6 +12,10 @@
     display: flex;
     align-items: flex-start;
 
+    &:first-child {
+      border-top: 1px solid #20262a;
+    }
+
     &:nth-child(2n) {
       background: #20262a;
     }
